Fixes header vert-align; youtube embed

--- a/elympics/styles/style.css
+++ b/elympics/styles/style.css
@@ -81,10 +81,10 @@ footer img {
 	padding: 1em 0;
 }
 
-/*.vertical-align { 
+.vertical-align { 
 	position: relative;
 	top: 50%;
 	-webkit-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
-}*/
+}
